project(SysY-Compiler CXX)
cmake_minimum_required(VERSION 3.16)
file(GLOB_RECURSE DIR_SRC "lib/*.cpp")
file(GLOB_RECURSE MAIN "./compiler.cpp")
add_compile_options(-Wall -Wextra -g -fexceptions -std=c++17)
include_directories(include)
include_directories(/usr/local/include/antlr4-runtime)
link_directories(/usr/local/lib)
add_executable(compiler ${DIR_SRC} ${MAIN})
target_link_libraries(compiler antlr4-runtime)